Add Plotly graphs

--- a/Notebooks/CreditCardCustomers.ipynb
+++ b/Notebooks/CreditCardCustomers.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "generic-transparency",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,10 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.io as pio\n",
     "import plotly as py\n",
+    "import plotly.figure_factory as ff\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "\n",
     "from Helpers.value_counts_functions import ValueCounts\n",
@@ -55,12 +58,14 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "sns.set_color_codes(\"pastel\")\n",
     "plt.style.use(['dark_background'])\n",
+    "pio.renderers.default = \"notebook\"\n",
+    "pio.templates.default = \"plotly_dark\"\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "angry-responsibility",
    "metadata": {},
    "outputs": [
@@ -541,7 +546,7 @@
        "11                                            0.99980                                                                                   "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "excessive-effort",
    "metadata": {},
    "outputs": [],
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "contained-royalty",
    "metadata": {},
    "outputs": [
@@ -993,7 +998,7 @@
        "11                1.364                  0.174  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "bibliographic-prisoner",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "neural-taste",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1244,7 @@
        "4                  0.000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "guilty-patent",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1286,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "terminal-arbor",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "musical-explosion",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1553,7 @@
        "max               3.714000               0.999000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "tribal-atlanta",
    "metadata": {},
    "outputs": [
@@ -1604,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "packed-coating",
    "metadata": {},
    "outputs": [],
@@ -1620,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "humanitarian-finding",
    "metadata": {},
    "outputs": [
@@ -1719,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "boring-salmon",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "lyric-choir",
    "metadata": {},
    "outputs": [
@@ -1929,8 +1934,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "desirable-cruise",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        Existing Customer\n",
+      "1        Existing Customer\n",
+      "2        Existing Customer\n",
+      "3        Existing Customer\n",
+      "4        Existing Customer\n",
+      "               ...        \n",
+      "10122    Existing Customer\n",
+      "10123    Attrited Customer\n",
+      "10124    Attrited Customer\n",
+      "10125    Attrited Customer\n",
+      "10126    Attrited Customer\n",
+      "Name: Attrition_Flag, Length: 10127, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Plot for how education level affects attrition for different genders\n",
+    "\n",
+    "hist_data = cat_columns[\"Attrition_Flag\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# fig = ff.create_distplot(\n",
+    "#     hist_data,\n",
+    "#     \"Attrition_Flag\",\n",
+    "#     show_hist = False\n",
+    "# )\n",
+    "# fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "supposed-river",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Templates configuration\n",
+       "-----------------------\n",
+       "    Default template: 'plotly'\n",
+       "    Available templates:\n",
+       "        ['ggplot2', 'seaborn', 'simple_white', 'plotly',\n",
+       "         'plotly_white', 'plotly_dark', 'presentation', 'xgridoff',\n",
+       "         'ygridoff', 'gridon', 'none']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "gothic-large",
    "metadata": {},
    "outputs": [],
    "source": []
